force-app/main/default/objects/AiAgentMessageAttachment_std__dlm/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>File Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>File Type</labelOverride>
        <masterLabel>File Type</masterLabel>
        <refAttrDeveloperName>FileType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>