force-app/main/default/objects/AiAgentMessageAttachment_std__dlm/fields/KQ_MessageId__c.field-meta.xml
<CustomField>
    <fullName>KQ_MessageId__c</fullName>
    <label>Key Qualifier Message Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Message Id</labelOverride>
        <masterLabel>Key Qualifier Message Id</masterLabel>
        <refAttrDeveloperName>KQ_MessageId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>