force-app/main/default/objects/AiAgentMessageAttachment_std__dlm/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <label>Message Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Message Id</labelOverride>
        <masterLabel>Message Id</masterLabel>
        <refAttrDeveloperName>MessageId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>