force-app/main/default/objects/AiAgentMessageAttachment_std__dlm/fields/rel_1788162136814_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1788162136814_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AiAgentMessageAttachment_std_Message_rel</label>
    <referenceTo>ssot__AiAgentInteractionMessage__dlm</referenceTo>
    <relationshipLabel>AiAgentMessageAttachment_std_Message_rel</relationshipLabel>
    <relationshipName>rel_1788162136814_end</relationshipName>
    <type>Lookup</type>
</CustomField>